test/tooltest/effectgen/valid/18_empty_struct.def
/*
 * Edge case: Empty struct (should parse but with no fields)
 */

struct [[ge::params(type=TEST_EMPTY, name="TestEmpty")]] TestEmptyParams {
};
