test/tooltest/effectgen/invalid/02_missing_closing_brace.def
/*
 * Invalid: Missing closing brace
 */

struct [[ge::params(type=TEST_NO_BRACE, name="TestNoBrace")]] TestNoBraceParams {
    float value1;
    int value2;
    bool flag;
// Missing closing brace here
